add aws authentication

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.37",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "aws-amplify": "^3.3.17",
     "bootstrap": "^4.6.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
